--- a/index.css
+++ b/index.css
@@ -1,75 +1,99 @@
-*{
+* {
   margin: 0px;
   padding: 0px;
+  box-sizing: border-box;
 }
 
 
-a{
-	text-decoration: none;
-	color: black;
+
+
+
+
+
+
+a {
+  text-decoration: none;
+  color: black;
 }
 
-body{
-	overflow-x: hidden;
+body {
+  overflow-x: hidden;
 }
 
-.nav-item{
-  font-size: 30px;
+.nav-item {
+  font-size: 25px;
   font-family: "Roboto";
   font-weight: bolder;
 }
 
-.nav-item:hover{
-  
-  border-bottom: 2px solid orange;
+.nav-item:hover {
+  border-bottom: 2px solid cyan;
 }
 
-
-
-
-.tagline{
-	color: #00bfd8;
-	font-size: 3rem;
-	font-family: turquoise;
-	font-weight: bolder;
+.tagline {
+  color: #00bfd8;
+  font-size: 3rem;
+  font-family: turquoise;
+  font-weight: bolder;
 }
 
-.about-para{
-	color: #626262;
-	font-family: sans-serif;
+.about-para {
+  color: #626262;
+  font-family: sans-serif;
 }
+
+.about-us {
+  font-size: 25px;
+  font-family: turquoise;
+}
+
 
 /*.third{
 	background: linear-gradient(180deg, #213b52 0%, #213c54 35%, #204564 100%);
 }
 */
 
-}
-.display-5{
-	font-weight: bolder;
-}
-
-
-.aboutus-para{
-	
-	font-size:20px;
-	font-family: Roboto;
-}
-
-
-.footer{
-	width: 100%;
 
 }
-
-.paragraph{
-	font-size:20px;
-	font-family: 
+.display-5 {
+  font-weight: bolder;
+}
+.footer {
+  width: 100%;
+}
+.paragraph {
+  font-size: 20px;
+  font-family:
+}
+.footer {
+  width: 100%;
 }
 
-.footer{
-	
-	width: 100%;
-	
+/*Responsive css code for viewing in different devices
+// X-Small devices (portrait phones, less than 576px)
+// No media query for `xs` since this is the default in Bootstrap
 
+// Small devices (landscape phones, 576px and up)*/
+@media (min-width: 576px) {
+  ...
+}
+
+/* Medium devices (tablets, 768px and up)*/
+@media (min-width: 768px) {
+  ...
+}
+
+/* Large devices (desktops, 992px and up)*/
+@media (min-width: 992px) {
+  ...
+}
+
+/* X-Large devices (large desktops, 1200px and up)*/
+@media (min-width: 1200px) {
+  ...
+}
+
+/* XX-Large devices (larger desktops, 1400px and up)*/
+@media (min-width: 1400px) {
+  ...
 }
